src/test/deca/syntax/invalid/resultats/test1_empty-lex.res
'{': [@0,280:280='{',<36>,14:0]
